[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medsched-pro-v2"
version = "2.0.0"
description = "High-fidelity clinical scheduling with resource constraints and temporal decay."
authors = [
  { name = "Author" }
]
dependencies = [
    "pydantic",
    "gymnasium",
    "stable-baselines3",
    "openai",
    "numpy",
    "fastapi",
    "uvicorn",
    "openenv-core"
]

[project.scripts]
server = "app:main"

[tool.setuptools]
py-modules = ["env", "app", "inference", "models", "tasks", "train_rl"]
